--- a/view/party_configuration_form.xml
+++ b/view/party_configuration_form.xml
@@ -1,7 +1,7 @@
 <data>
 	<xpath expr="/form/field[@name='party_lang']" position="after">
-		<label name="default_country"/>
-		<field name="default_country"/>
+		<label name="party_country"/>
+		<field name="party_country"/>
 	</xpath>
 </data>
 
