--- a/view/party_configuration_form.xml
+++ b/view/party_configuration_form.xml
@@ -1,5 +1,5 @@
 <data>
-	<xpath expr="/form/field[@name='party_lang']" position="after">
+	<xpath expr="/form" position="inside">
 		<label name="party_country"/>
 		<field name="party_country"/>
 	</xpath>
